--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="Description">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  
+  <!-- 设置浏览器图标 -->
+    <link rel="icon" href="/222.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/222.ico" type="image/x-icon" />
     <!-- 默认主题 -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
 </head>
@@ -35,6 +37,7 @@
 			
             // 自定义侧边栏后默认不会再生成目录，设置生成目录的最大层级（建议配置为2-4）
             subMaxLevel: 5,
+			
 		
         }
     </script>
