--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Description">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <!-- 设置浏览器图标 -->
+  <!-- 设置浏览器图标github无用 -->
    <!-- <link rel="icon" href="/222.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/222.ico" type="image/x-icon" /> -->
     <!-- 默认主题 -->
