--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="shortcut icon" href="/222.ico" type="image/x-icon" /> -->
     <!-- 默认主题 -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
-	<link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
+	
+	<!--<link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css"> -->
 </head>
 
 <body>
@@ -70,18 +71,25 @@
     <!--在所有的代码块上添加一个简单的Click to copy按钮来允许用户从你的文档中轻易地复制代码-->
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
 	
-	<script src="//unpkg.com/docsify/lib/plugins/gitalk.min.js"></script>
-<script src="//unpkg.com/gitalk/dist/gitalk.min.js"></script>
+	
+	<div id="container"></div>
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
-  var gitalk = new Gitalk({
-      clientID: '437abba7ac9b3e22dd18',
-      clientSecret: 'bb16318f47cbd85b7e0bdc892ba2bf033f3b2b69',
-      repo: 'Blogs',
-      owner: 'zouzhaozzzz',
-      admin: ['zouzhaozzzz'],
-      id: location.pathname,      // Ensure uniqueness and length less than 50
-    })
+	var gitment = new Gitment({
+		id: , // 可选。默认为 location.href
+		owner: 'zouzhaozzzz',
+		repo: 'Blogs',
+		oauth: {
+		client_id: '437abba7ac9b3e22dd18',
+		client_secret: 'bb16318f47cbd85b7e0bdc892ba2bf033f3b2b69',
+  },
+})
+gitment.render('container')
 </script>
+	
+	
+	
 
 </body>
 
