--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             }
         }
     </script>
+	
     <!-- docsify的js依赖 -->
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
     <!-- 图片放大缩小支持 -->
@@ -70,13 +71,12 @@
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
     <!--在所有的代码块上添加一个简单的Click to copy按钮来允许用户从你的文档中轻易地复制代码-->
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
-	
-	
-</script>
-	<script src="//unpkg.com/docsify/lib/plugins/gitalk.min.js"></script>
-	<script src="//unpkg.com/gitalk/dist/gitalk.min.js"></script>
-<script>
-  var gitalk = new Gitalk({
+		
+
+
+	<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
+<div id="gitalk-container"></div>     <script type="text/javascript">
+    var gitalk = new Gitalk({
       clientID: '437abba7ac9b3e22dd18',
       clientSecret: 'bb16318f47cbd85b7e0bdc892ba2bf033f3b2b69',
       repo: 'Blogs',
@@ -84,6 +84,7 @@
       admin: ['zouzhaozzzz'],
       id: location.pathname,      // Ensure uniqueness and length less than 50
     })
+	gitalk.render('gitalk-container');
 </script>
 	
 	
