--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 		
 
 
-	<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
-<div id="gitalk-container"></div>     <script type="text/javascript">
+	<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
+     <script type="text/javascript">
     var gitalk = new Gitalk({
       clientID: '437abba7ac9b3e22dd18',
       clientSecret: 'bb16318f47cbd85b7e0bdc892ba2bf033f3b2b69',
