--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
 		
 
-
+<script src="//unpkg.com/docsify/lib/plugins/gitalk.min.js"></script>
 	<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
-     <script type="text/javascript">
+     <script >
     var gitalk = new Gitalk({
       clientID: '437abba7ac9b3e22dd18',
       clientSecret: 'bb16318f47cbd85b7e0bdc892ba2bf033f3b2b69',
@@ -84,7 +84,7 @@
       admin: ['zouzhaozzzz'],
       id: location.pathname,      // Ensure uniqueness and length less than 50
     })
-	gitalk.render('gitalk-container');
+	
 </script>
 	
 	
