--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     var gitalk = new Gitalk({
       clientID: '437abba7ac9b3e22dd18',
       clientSecret: 'bb16318f47cbd85b7e0bdc892ba2bf033f3b2b69',
-      repo: 'Blogs',
+      repo: 'UseGitTalk',
       owner: 'zouzhaozzzz',
       admin: ['zouzhaozzzz'],
       id: location.pathname,  
