--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="shortcut icon" href="/222.ico" type="image/x-icon" /> -->
     <!-- 默认主题 -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
-	
-
+	<!-- 复制提醒 -->
+<link rel="stylesheet" href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" type='text/css' media='all' />
 </head>
 
 <body>
@@ -117,11 +117,18 @@
     });
   </script>
 
-
-
   <!-- mouse click -->
 <script src="//cdn.jsdelivr.net/gh/jerryc127/butterfly_cdn@2.1.0/js/click_heart.js"></script>
 	
+	<!-- 复制提醒 -->
+<script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
+<script>
+  document.body.oncopy = function () {
+    swal("复制成功 ",
+            "如果你觉得本仓库不错，那就来 GitHub 给个Star吧 -by zouzhao",
+            "success"); };
+</script>
+
 
 </body>
 
