--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
 <script>
   document.body.oncopy = function () {
-    swal("复制成功 ",
+    swal("🎉复制成功🎉 ",
             "如果你觉得本仓库不错，那就来 GitHub 给个Star吧 -by zouzhao",
             "success"); };
 </script>
