--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/@fortawesome/fontawesome-free@6/css/all.min.css">
 
+
+
 </head>
 
 <body>
@@ -256,11 +258,12 @@
     </script>
 
 
-
-
 	
 <!-- 访问量统计 -->
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.22.0/components/prism-java.min.js"></script>
+
 </body>
 
 </html>
