--- a/index.html
+++ b/index.html
@@ -256,8 +256,9 @@
 	
 <!-- 访问量统计 -->
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-
+<!-- java代码亮 -->
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.22.0/components/prism-java.min.js"></script>
+
 
 </body>
 
