--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
 <!-- 鼠标小星星拖尾跟随 -->
-  <span class="js-cursor-container"></span>
+<!--   <span class="js-cursor-container"></span>
     <script>
         (function fairyDustCursor() {
  
@@ -252,7 +252,7 @@
             if (!('ontouchstart' in window || navigator.msMaxTouchPoints)) init();
         })();    
     </script>
-
+ -->
 
 	
 <!-- 访问量统计 -->
